--- a/QuadModels/QuadModels.csproj
+++ b/QuadModels/QuadModels.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="build.bat" />
     <None Include="QuadModels.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
