--- a/QuadModels/QuadModels.csproj
+++ b/QuadModels/QuadModels.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ActiveQuad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
